--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,6 +2,7 @@
     width: 100%;
     z-index: 55;
     background-color: rgba(0, 0, 0, 0.9);
+    padding: 15px 0 !important;
 }
 .navbar-toggler{
     color: black !important;
